RESOLVED FIXED72607
Print warning for the Qt port when a process crashes and is relaunched
https://bugs.webkit.org/show_bug.cgi?id=72607
Summary Print warning for the Qt port when a process crashes and is relaunched
Kenneth Rohde Christiansen
Reported 2011-11-17 06:40:24 PST
SSIA
Attachments
Patch (10.71 KB, patch)
2011-11-17 06:42 PST, Kenneth Rohde Christiansen
no flags
Patch (6.56 KB, patch)
2011-11-17 07:25 PST, Kenneth Rohde Christiansen
tonikitoo: review+
Kenneth Rohde Christiansen
Comment 1 2011-11-17 06:42:27 PST
WebKit Review Bot
Comment 2 2011-11-17 06:46:08 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
alan
Comment 3 2011-11-17 06:58:22 PST
+ const String url = m_mainFrame->url(); WebPageProxy functions usually check against !m_mainFrame in N9 codebase, we've got loadStateAtProcessExit() urlAtProcessExit() functions to also cancel pending loads, when the process exits. Wondering if passing the url (and loading state?) around is the preferred way now.
Simon Hausmann
Comment 4 2011-11-17 07:00:28 PST
Comment on attachment 115580 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115580&action=review > Source/WebKit2/UIProcess/qt/QtWebPageProxy.cpp:680 > + m_viewInterface->processDidCrash(QUrl(url)); It's not your fault, but this part of converting the QString to a QURL is wrong. We are missing a convenience function, but conceptually we should use: WebCore::KURL kurl(WebCore::ParsedURLStringTag, url); QUrl qurl(kurl);
Kenneth Rohde Christiansen
Comment 5 2011-11-17 07:25:25 PST
Antonio Gomes
Comment 6 2011-11-17 07:34:35 PST
Comment on attachment 115584 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115584&action=review > Source/WebKit2/UIProcess/WebPageProxy.cpp:3087 > + const String url = m_mainFrame->url(); > + do you need this one?
Kenneth Rohde Christiansen
Comment 7 2011-11-17 07:38:51 PST
Comment on attachment 115584 [details] Patch Committed (with fix) r100621
Note You need to log in before you can comment on or make changes to this bug.