Print warning for the Qt port when a process crashes and is relaunched https://bugs.webkit.org/show_bug.cgi?id=72607

Reviewed by Antonio Gomes.

Make the QtViewInterface::processDidCrash take a URL string argument,
for being able to say which url was the origin of the crash.

We now additionally store the load state and url at process exit. This
is needed for printing the warning and for further crash handling.

* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidCrash):
* UIProcess/qt/QtViewInterface.cpp:
(WebKit::QtViewInterface::processDidCrash):
(WebKit::QtViewInterface::didRelaunchProcess):
* UIProcess/qt/QtViewInterface.h:
* UIProcess/qt/QtWebPageProxy.cpp:
(QtWebPageProxy::processDidCrash):
* UIProcess/qt/QtWebPageProxy.h:

Canonical link: https://commits.webkit.org/89127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100621 268f45cc-cd09-0410-ab3c-d52691b4dbfc